# flask-website-graphing-test

./: .breakpoints  gaussianProcess.py  main.py  pyproject.toml  replit.nix  requirements.txt
static/: styles.css
templates/: base.html  graph.html  index.html  input.html
