[tool.poetry]
name = "repl-nix-seaswallows"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_seaswallows"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
gpy = "^1.10.0"
matplotlib = "^3.7.0"
ipython = "^8.11.0"
plotly = "^5.13.1"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
